--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,7 @@
 @import './components/backdrop';
 @import './components/modal-window';
 @import './components/modal-form';
+@import './components/title';
 @import './layout/header';
 @import './layout/hero';
 @import './layout/features';
