--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,10 +7,12 @@
 @import './components/social-list';
 @import './components/social-list__link';
 @import './components/social-list__icon';
+@import './components/social-list__item';
 @import './components/backdrop';
 @import './components/modal-window';
 @import './components/modal-form';
 @import './components/title';
+@import './components/mobile-menu';
 @import './layout/header';
 @import './layout/hero';
 @import './layout/features';
