--- a/css/main.css
+++ b/css/main.css
@@ -36,21 +36,19 @@ h4,
 h5,
 h6,
 p {
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 0;
 }
 
 ul,
 ol {
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-left: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .list {
   list-style: none;
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
 }
 
 .link {
@@ -59,6 +57,8 @@ ol {
 
 img {
   display: block;
+  width: 100%;
+  height: auto;
 }
 
 .container {
@@ -119,7 +119,7 @@ img {
 
 .social-list {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   margin: 0 auto;
 }
 
@@ -150,6 +150,10 @@ img {
   fill: var(--primary-bg-color);
 }
 
+.social-list__item:not(:last-child) {
+  margin-right: 10px;
+}
+
 .backdrop {
   position: fixed;
   top: 0;
@@ -174,6 +178,13 @@ img {
   border-radius: 4px;
   transform: translate(-50%, -50%) scale(1);
   transition: transform var(--duration) var(--timing-function), visibility var(--duration) var(--timing-function);
+}
+
+@media screen and (max-width: 1199px) {
+  .modal {
+    width: 100%;
+    max-width: 450px;
+  }
 }
 
 .backdrop.is-hidden .modal {
@@ -299,16 +310,27 @@ textarea {
 }
 
 .modal-form__checkbox-agreement {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 14px;
+  display: block;
+  white-space: nowrap;
+  font-size: 12px;
   line-height: 1.7;
   margin-bottom: 30px;
 }
 
+@media screen and (min-width: 1200px) {
+  .modal-form__checkbox-agreement {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
+  }
+  .modal-form__checkbox-link {
+    font-size: 14px;
+  }
+}
+
 .modal-form__checkbox-link {
-  font-size: 14px;
+  font-size: 12px;
   line-height: 1.7;
   text-decoration-line: underline;
   color: var(--accent-color);
@@ -366,8 +388,112 @@ textarea {
   }
 }
 
+@media screen and (max-width: 767px) {
+  .mobile-menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    overflow: auto;
+    z-index: 1000;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    background-color: var(--primary-bg-color);
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+  }
+  .mobile-menu__container {
+    position: relative;
+    padding-left: 25px;
+    padding-top: 48px;
+    padding-bottom: 48px;
+  }
+  .mobile-menu__close-btn {
+    position: absolute;
+    padding: 0;
+    top: 10px;
+    right: 0;
+    width: 40px;
+    height: 40px;
+    border: none;
+    background-color: transparent;
+  }
+  .mobile-menu__item:not(:last-child) {
+    margin-bottom: 32px;
+  }
+  .mobile-menu__link {
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 47px;
+    color: var(--title-text-color);
+    transition: color var(--duration) var(--timing-function);
+  }
+  .mobile-menu__link.current {
+    color: var(--accent-color);
+  }
+  .mobile-menu.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+  }
+  .mobile-menu__nav {
+    margin-bottom: 302px;
+  }
+  .mobile-menu__link:hover,
+  .mobile-menu__link:focus {
+    color: var(--accent-color);
+  }
+  .mobile-contact__link_tel {
+    display: block;
+    margin-bottom: 32px;
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 1.18;
+    color: var(--accent-color);
+  }
+  .mobile-contact__link_mail {
+    display: block;
+    margin-bottom: 64px;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 1.17;
+    color: var(--primary-text-color);
+  }
+  .mobile-social {
+    display: flex;
+  }
+  .mobile-social__link {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.22;
+    color: var(--accent-color);
+  }
+  .mobile-social__item:not(:last-child) {
+    padding-right: 10px;
+    border-right: 1px solid rgba(33, 33, 33, 0.2);
+  }
+  .mobile-social__item:not(:first-child) {
+    padding-left: 10px;
+  }
+  .modal__close-icon {
+    transition: fill var(--duration) var(--timing-function);
+  }
+  .modal__close-icon:hover,
+  .modal__close-icon:focus {
+    fill: var(--accent-color);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .mobile-menu {
+    display: none;
+  }
+}
+
 .main-nav {
   display: flex;
+  justify-content: space-between;
   align-items: center;
 }
 
@@ -395,7 +521,31 @@ textarea {
   animation-iteration-count: infinite;
 }
 
-/*Site nav*/
+@media screen and (max-width: 767px) {
+  .site-nav {
+    display: none;
+  }
+  .contact {
+    display: none;
+  }
+  .header__mobile-menu-btn {
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    line-height: 0;
+  }
+  .header__mobile-menu-icon {
+    width: 40px;
+    height: 40px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header__mobile-menu-btn {
+    display: none;
+  }
+}
+
 .site-nav__header {
   margin-left: 93px;
 }
@@ -437,16 +587,23 @@ textarea {
   margin-left: 50px;
 }
 
-.current {
-  padding-bottom: 28px;
-}
-
 .contact__header {
   margin-left: auto;
 }
 
-.contact .contact__item + .contact__item {
-  margin-left: 50px;
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .contact_tel {
+    margin-bottom: 10px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contact .contact__item + .contact__item {
+    margin-left: 50px;
+  }
+  .contact {
+    display: flex;
+  }
 }
 
 .contact__link {
@@ -552,32 +709,33 @@ textarea {
   }
 }
 
-.features-heading__items:not(:last-child) {
-  margin-bottom: 30px;
+@media screen and (max-width: 767px) {
+  .features-heading__items:not(:last-child) {
+    margin-bottom: 30px;
+    width: 450px;
+  }
 }
 
 @media screen and (min-width: 768px) {
-  .features-heading__items {
-    width: 354px;
-  }
-  .features-heading__items:not(:nth-child(even)) {
-    margin-right: 30px;
-  }
   .features-heading__list {
+    margin: -15px;
     display: flex;
     flex-wrap: wrap;
+  }
+  .features-heading__items {
+    margin: 15px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .features-heading__items {
+    width: 354px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .features-heading__items {
     width: 270px;
-  }
-  .features-heading__items:nth-child(2) {
-    margin-right: 30px;
-  }
-  .features-heading__items:nth-child(n + 1) {
-    margin-bottom: 0;
   }
 }
 
@@ -656,24 +814,83 @@ textarea {
   }
 }
 
-.clients__text {
-  margin-bottom: 50px;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
+.section-team {
+  background-color: var(--secondary-bg-color);
+}
+
+.team__item {
+  background-color: var(--primary-bg-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+
+@media screen and (max-width: 767px) {
+  .team__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .team {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -15px;
+  }
+  .team__item {
+    margin: 15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team {
+    display: flex;
+  }
+  .team__item:not(:last-child) {
+    margin-right: 30px;
+  }
+}
+
+.team__title-text {
+  padding: 30px 0 24px;
+}
+
+@media screen and (min-width: 1200px) {
+  .team__title-text {
+    padding: 30px 0;
+  }
+}
+
+.team__title-text_title {
+  margin-bottom: 10px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
   text-align: center;
   color: var(--title-text-color);
 }
 
+.team__title-text_text {
+  margin-bottom: 16px;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+}
+
 .clients__list {
   display: flex;
+  flex-wrap: wrap;
+  margin: -15px;
+}
+
+.clients__item {
+  margin: 15px;
 }
 
 .client__link {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 170px;
+  width: 210px;
   height: 92px;
   outline: none;
   background-color: var(--primary-bg-color);
@@ -686,8 +903,18 @@ textarea {
   border: 1px solid var(--accent-color);
 }
 
-.clients__item:not(:last-child) {
-  margin-right: 30px;
+@media screen and (min-width: 768px) {
+  .client__link {
+    width: 226px;
+    height: 92px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .client__link {
+    width: 170px;
+    height: 92px;
+  }
 }
 
 .clients__icon {
@@ -700,38 +927,99 @@ textarea {
   fill: var(--accent-color);
 }
 
+.client_one {
+  width: 44px;
+  height: 49px;
+}
+
+@media screen and (min-width: 1200px) {
+  .client_one {
+    width: 41px;
+    height: 47px;
+  }
+}
+
+.client_two {
+  width: 40px;
+  height: 52px;
+}
+
+.client_three {
+  width: 41px;
+  height: 42px;
+}
+
+@media screen and (min-width: 1200px) {
+  .client_three {
+    width: 43px;
+    height: 41px;
+  }
+}
+
+.client_four {
+  width: 80px;
+  height: 42px;
+}
+
+@media screen and (min-width: 1200px) {
+  .client_four {
+    width: 85px;
+    height: 41px;
+  }
+}
+
+.client-five {
+  width: 59px;
+  height: 47px;
+}
+
+@media screen and (min-width: 1200px) {
+  .client-five {
+    width: 63px;
+    height: 45px;
+  }
+}
+
+.client_six {
+  width: 88px;
+  height: 45px;
+}
+
+@media screen and (min-width: 1200px) {
+  .client_six {
+    width: 94px;
+    height: 44px;
+  }
+}
+
 footer {
   background-color: #2f303a;
 }
 
 .footer-section__container {
-  display: flex;
-  align-items: baseline;
   padding-top: 60px;
   padding-bottom: 60px;
 }
 
 .footer-section__address {
-  margin-right: 70px;
+  text-align: center;
 }
 
-.footer-section__margin-footer {
-  display: block;
-  margin-bottom: 20px;
-}
-
-.footer-section__address {
-  margin-top: 0px;
-  margin-bottom: 9px;
-  width: 231px;
+.footer-section__geo {
+  margin-bottom: 8px;
   font-style: normal;
   font-size: 14px;
   line-height: 1.71;
   color: var(--primary-bg-color);
 }
 
+.footer-section__item:not(:last-child) {
+  margin-bottom: 8px;
+}
+
 .footer-section__contact {
   display: inline-block;
+  text-align: center;
   font-style: normal;
   font-size: 14px;
   line-height: 1.71;
@@ -744,16 +1032,14 @@ footer {
   color: var(--accent-color);
 }
 
-.footer-section__item:first-child {
-  margin-bottom: 9px;
-}
-
 .main-nav__logo_footer {
+  display: inline-block;
+  margin-bottom: 20px;
   color: var(--primary-bg-color);
 }
 
 .container__join {
-  margin-right: 93px;
+  text-align: center;
 }
 
 .join__text {
@@ -767,8 +1053,7 @@ footer {
 
 .join__list {
   display: flex;
-  justify-content: left;
-  width: 206px;
+  justify-content: center;
 }
 
 .join__link {
@@ -796,7 +1081,10 @@ footer {
   fill: var(--primary-bg-color);
 }
 
-/*Form footer*/
+.subscribe {
+  text-align: center;
+}
+
 .subscribe__text {
   display: block;
   margin-bottom: 20px;
@@ -807,14 +1095,9 @@ footer {
   color: var(--primary-bg-color);
 }
 
-.subscribe__wrapper {
-  display: flex;
-}
-
 .subscribe__input {
-  width: 358px;
+  width: 450px;
   height: 50px;
-  margin-right: 12px;
   padding: 15px 16px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-sizing: border-box;
@@ -831,13 +1114,81 @@ footer {
 }
 
 .button_subscribe {
-  display: flex;
-  align-items: center;
+  position: relative;
+  width: 200px;
+  height: 50px;
+  padding: 0 0 0 29px;
+  border: none;
+  border-radius: 4px;
+  font-weight: 700;
+  font-size: 16px;
+  text-align: start;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  cursor: pointer;
+  background-color: var(--accent-color);
+  color: var(--primary-bg-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: 0px;
+  transition: background-color var(--duration) var(--timing-function);
+}
+
+.button_subscribe:hover {
+  background-color: #188ce8;
 }
 
 .subscribe_svg {
-  margin-left: 10px;
+  position: absolute;
   width: 24px;
   height: 24px;
+  top: 50%;
+  right: 28px;
+  transform: translateY(-50%);
+}
+
+@media screen and (min-width: 768px) {
+  .footer-section__container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .footer-section__address,
+  .container__join {
+    margin-bottom: 60px;
+  }
+  .subscribe__input {
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .subscribe__wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-section__address {
+    text-align: start;
+  }
+  .container__join {
+    text-align: start;
+  }
+  .subscribe {
+    text-align: start;
+  }
+  .subscribe__input {
+    width: 358px;
+    margin-right: 12px;
+  }
+  .footer-section__container {
+    justify-content: space-between;
+  }
 }
 /*# sourceMappingURL=main.css.map */
