--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -12,21 +12,19 @@ h4,
 h5,
 h6,
 p {
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 0;
 }
 
 ul,
 ol {
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-left: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .list {
   list-style: none;
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
 }
 
 .link {
@@ -35,4 +33,6 @@ ol {
 
 img {
   display: block;
+  width: 100%;
+  height: auto;
 }
