--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -1,6 +1,3 @@
-.modal-form {
-}
-
 .modal__text {
   font-weight: 700;
   font-size: 20px;
@@ -86,16 +83,27 @@ textarea {
 }
 
 .modal-form__checkbox-agreement {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 14px;
+  display: block;
+  white-space: nowrap;
+  font-size: 12px;
   line-height: 1.7;
   margin-bottom: 30px;
 }
 
+@media screen and (min-width: 1200px) {
+  .modal-form__checkbox-agreement {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
+  }
+  .modal-form__checkbox-link {
+    font-size: 14px;
+  }
+}
+
 .modal-form__checkbox-link {
-  font-size: 14px;
+  font-size: 12px;
   line-height: 1.7;
   text-decoration-line: underline;
   color: var(--accent-color);
