--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -3,33 +3,29 @@ footer {
 }
 
 .footer-section__container {
-  display: flex;
-  align-items: baseline;
   padding-top: 60px;
   padding-bottom: 60px;
 }
 
 .footer-section__address {
-  margin-right: 70px;
+  text-align: center;
 }
 
-.footer-section__margin-footer {
-  display: block;
-  margin-bottom: 20px;
-}
-
-.footer-section__address {
-  margin-top: 0px;
-  margin-bottom: 9px;
-  width: 231px;
+.footer-section__geo {
+  margin-bottom: 8px;
   font-style: normal;
   font-size: 14px;
   line-height: 1.71;
   color: var(--primary-bg-color);
 }
 
+.footer-section__item:not(:last-child) {
+  margin-bottom: 8px;
+}
+
 .footer-section__contact {
   display: inline-block;
+  text-align: center;
   font-style: normal;
   font-size: 14px;
   line-height: 1.71;
@@ -43,16 +39,14 @@ footer {
   }
 }
 
-.footer-section__item:first-child {
-  margin-bottom: 9px;
-}
-
 .main-nav__logo_footer {
+  display: inline-block;
+  margin-bottom: 20px;
   color: var(--primary-bg-color);
 }
 
 .container__join {
-  margin-right: 93px;
+  text-align: center;
 }
 
 .join__text {
@@ -66,8 +60,7 @@ footer {
 
 .join__list {
   display: flex;
-  justify-content: left;
-  width: 206px;
+  justify-content: center;
 }
 
 .join__link {
@@ -96,7 +89,11 @@ footer {
   fill: var(--primary-bg-color);
 }
 
-/*Form footer*/
+// /*Form footer*/
+
+.subscribe {
+  text-align: center;
+}
 
 .subscribe__text {
   display: block;
@@ -108,14 +105,9 @@ footer {
   color: var(--primary-bg-color);
 }
 
-.subscribe__wrapper {
-  display: flex;
-}
-
 .subscribe__input {
-  width: 358px;
+  width: 450px;
   height: 50px;
-  margin-right: 12px;
   padding: 15px 16px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-sizing: border-box;
@@ -132,12 +124,81 @@ footer {
 }
 
 .button_subscribe {
-  display: flex;
-  align-items: center;
+  position: relative;
+  width: 200px;
+  height: 50px;
+  padding: 0 0 0 29px;
+  border: none;
+  border-radius: 4px;
+  font-weight: 700;
+  font-size: 16px;
+  text-align: start;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  cursor: pointer;
+  background-color: var(--accent-color);
+  color: var(--primary-bg-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: 0px;
+  transition: background-color var(--duration) var(--timing-function);
+
+  &:hover {
+    background-color: #188ce8;
+  }
 }
 
 .subscribe_svg {
-  margin-left: 10px;
+  position: absolute;
   width: 24px;
   height: 24px;
+  top: 50%;
+  right: 28px;
+  transform: translateY(-50%);
+}
+
+@media screen and (min-width: 768px) {
+  .footer-section__container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .footer-section__address,
+  .container__join {
+    margin-bottom: 60px;
+  }
+
+  .subscribe__input {
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .subscribe__wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-section__address {
+    text-align: start;
+  }
+  .container__join {
+    text-align: start;
+  }
+  .subscribe {
+    text-align: start;
+  }
+  .subscribe__input {
+    width: 358px;
+    margin-right: 12px;
+  }
+  .footer-section__container {
+    justify-content: space-between;
+  }
 }
