--- a/sass/layout/_portfolio__button-items.scss
+++ b/sass/layout/_portfolio__button-items.scss
@@ -1,11 +1,32 @@
 .portfolio__button-items {
   display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
+  flex-wrap: wrap;
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 1200px) {
+  .portfolio__button-items {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 50px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .portfolio__button-items {
+    margin-bottom: 30px;
+    justify-content: center;
+  }
 }
 
 .portfolio__button:not(:last-child) {
   margin-right: 8px;
+}
+
+@media screen and (max-width: 767px) {
+  .portfolio__button:nth-child(-n + 3) {
+    margin-bottom: 15px;
+  }
 }
 
 .portfolio__button_primary {
