--- a/sass/layout/_portfolio__img.scss
+++ b/sass/layout/_portfolio__img.scss
@@ -1,20 +1,32 @@
-.portfolio__img {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.portfolio__item {
-  margin-right: 30px;
-  margin-bottom: 30px;
-
-  &:nth-child(3n) {
-    margin-right: 0px;
-  }
-
-  &:nth-last-child(-n + 3) {
-    margin-bottom: 0px;
+@media screen and (max-width: 767px) {
+  .portfolio__item:not(:last-child) {
+    margin-bottom: 30px;
   }
 }
+
+@media screen and (min-width: 768px) {
+  .portfolio__img {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -15px;
+  }
+  .portfolio__item {
+    margin: 15px;
+  }
+}
+
+// .portfolio__item {
+//   margin-right: 30px;
+//   margin-bottom: 30px;
+
+//   &:nth-child(3n) {
+//     margin-right: 0px;
+//   }
+
+//   &:nth-last-child(-n + 3) {
+//     margin-bottom: 0px;
+//   }
+// }
 
 .portfolio__link {
   display: block;
@@ -67,7 +79,7 @@
 
 .section__title-text_title {
   margin-bottom: 4px;
-  letter-spacing: 0.06em;
+  letter-spacing: 0.04em;
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
