--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -4,6 +4,7 @@
 @import './base/container';
 @import './base/section';
 @import './components/button';
+@import './components/mobile-menu';
 @import './layout/header';
 @import './layout/footer';
 @import './layout/portfolio__button-items';
