--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -42,7 +42,8 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../../images/hero-mob.jpg);
+    url(/images/hero-mob.jpg);
+  // url(../../images/hero-mob.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
