Добавляет архитектуру sass

--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,11 +1,13 @@
 footer {
   background-color: #2f303a;
-}
-
-.footer-section__container {
   padding-top: 60px;
   padding-bottom: 60px;
 }
+
+// .footer-section__container {
+//   padding-top: 60px;
+//   padding-bottom: 60px;
+// }
 
 .footer-section__address {
   text-align: center;
