--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -29,6 +29,11 @@
 }
 
 @media screen and (max-width: 767px) {
+  .spacing {
+    padding-top: 16px;
+    padding-bottom: 16px;
+  }
+
   .site-nav {
     display: none;
   }
@@ -102,7 +107,7 @@
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
-  .contact_tel {
+  .contact__item:not(:last-child) {
     margin-bottom: 10px;
   }
 }
