--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -4,8 +4,21 @@
 @import './base/container';
 @import './base/section';
 @import './components/button';
+@import './components/social-list';
+@import './components/social-list__link';
+@import './components/social-list__icon';
+@import './components/social-list__item';
+@import './components/backdrop';
+@import './components/modal-window';
+@import './components/modal-form';
+@import './components/title';
 @import './components/mobile-menu';
 @import './layout/header';
+@import './layout/hero';
+@import './layout/features';
+@import './layout/image-items';
+@import './layout/team';
+@import './layout/clients';
 @import './layout/footer';
 @import './layout/portfolio__button-items';
 @import './layout/portfolio__img';
