--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 @import url(../images/hero-mob@2x.jpg);
+@import url(/images/hero-mob@2x.jpg);
 :root {
   --primary-text-color: #757575;
   --title-text-color: #212121;
