Добавляет архитектуру sass

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,3 +21,4 @@
 @import './layout/clients';
 @import './layout/footer';
 @import url(../images/hero-mob@2x.jpg);
+@import url(/images/hero-mob@2x.jpg);
