--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -677,7 +677,7 @@ textarea {
 .hero__overlay {
   margin-left: auto;
   margin-right: auto;
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/hero-mob.jpg);
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-mob.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -716,7 +716,6 @@ textarea {
 @media screen and (max-width: 767px) {
   .features-heading__items:not(:last-child) {
     margin-bottom: 30px;
-    width: 450px;
   }
 }
 
