--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -1,7 +1,7 @@
 @media screen and (max-width: 767px) {
   .features-heading__items:not(:last-child) {
     margin-bottom: 30px;
-    width: 450px;
+    // width: 450px;
   }
 }
 
