--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -5,6 +5,8 @@
 }
 
 .clients__item {
+  height: 92px;
+  flex-basis: calc((100% - 60px) / 2);
   margin: 15px;
 }
 
@@ -12,8 +14,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 210px;
-  height: 92px;
+  width: 100%;
+  height: 100%;
   outline: none;
   background-color: var(--primary-bg-color);
   border: 1px solid #afb1b8;
@@ -27,24 +29,16 @@
 }
 
 @media screen and (min-width: 768px) {
-  .client__link {
-    width: 226px;
-    height: 92px;
+  .clients__item {
+    flex-basis: calc((100% - 90px) / 3);
   }
 }
 
 @media screen and (min-width: 1200px) {
-  .client__link {
-    width: 170px;
-    height: 92px;
+  .clients__item {
+    flex-basis: calc((100% - 180px) / 6);
   }
 }
-
-// @media screen and (min-width: 1200px) {
-//   .clients__item:not(:last-child) {
-//     margin-right: 30px;
-//   }
-// }
 
 .clients__icon {
   fill: #afb1b8;
