--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -43,7 +43,6 @@
       rgba(47, 48, 58, 0.4)
     ),
     url(../images/hero-mob.jpg);
-  // url(../../images/hero-mob.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -58,7 +57,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../../images/hero-mob@2x.jpg);
+      url(../images/hero-mob@2x.jpg);
   }
 }
 
@@ -69,7 +68,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../../images/hero-tablet.jpg);
+      url(../images/hero-tablet.jpg);
   }
 }
 
@@ -82,7 +81,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../../images/hero-tablet@2x.jpg);
+      url(../images/hero-tablet@2x.jpg);
   }
 }
 
@@ -93,7 +92,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../../images/hero-desktop.jpg);
+      url(../images/hero-desktop.jpg);
   }
 }
 
@@ -106,6 +105,6 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../../images/hero-desktop@2x.jpg);
+      url(../images/hero-desktop@2x.jpg);
   }
 }
